2013-10-15  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (CryptAcquireContextW): Remove.
	(CryptGenRandom): Remove.
	(CryptReleaseContext): Remove.
	(SystemFunction036): Define.  Add comment to explain that this is
	actually the RtlGenRandom function.
	* fhandler.h (class fhandler_dev_random): Drop crypt_prov member.
	(fhandler_dev_random::fhandler_dev_random): Define inline.
	(fhandler_dev_random::dup): Drop declaration.
	* fhandler_random.cc (fhandler_dev_random::fhandler_dev_random): Remove
	here.
	(fhandler_dev_random::crypt_gen_random): Use RtlGenRandom to drop
	dependency to old Crypto API.
	(fhandler_dev_random::read): Implement an enhanced version of reading
	random bytes from RtlGenRandom for the sake of a better /dev/random
	emulation.
	(fhandler_dev_random::close): Just return 0 since crypt_prov doesn't
	exisyt anymore.
	(fhandler_dev_random::dup): Drop entirely for the same reason.

2013-10-15  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (mmap64): Convert pagesize from DWORD to size_t to avoid
	a rounding error for allocations beyond 4 Gigs.

2013-10-05  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* ntdll.h: Guard against new header files.

2013-09-25  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 26.

2013-09-25  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* sigproc.h (hold_everything::ischild): Declare as reference.
	(hold_everything::hold_everything): Store address of caller's notion of
	"ischild".

2013-09-25  Christopher Faylor  <me.cygwin2013@cgf.cx>
	    Paul Kunysch  <paul.kunysch@emsys.de>

	* thread.cc (semaphore::_getvalue): Set *sval as appropriate.  Set
	errno and return -1 on error.

2013-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Belatedly bump
	to 25.

2013-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* heap.cc (RAISEHEAP_SIZE): New definition.